traefik.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  annotations:
  labels:
    k8s-app: traefik-ingress-lb
  name: traefik-ingress-controller
  namespace: kube-system
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
      name: traefik-ingress-lb
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      containers:
      - args:
        - --api
        - --kubernetes
        - --logLevel=INFO
        - --ping
        - --ping.entrypoint=hc
        - --entryPoints=Name:https Address::443 TLS
        - --entryPoints=Name:http Address::80 Redirect.EntryPoint:https
        - --entryPoints=Name:hc Address::8000
        - --defaultentrypoints=https
        - --sendanonymoususage=true
        image: traefik
        livenessProbe:
          httpGet:
            path: /ping
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        imagePullPolicy: Always
        name: traefik-ingress-lb
        ports:
        - containerPort: 80
          hostPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          hostPort: 443
          name: https
          protocol: TCP
        - containerPort: 8080
          name: admin
          protocol: TCP
        - containerPort: 8000
          name: hc
          protocol: TCP
        resources:
          limits:
            cpu: 50m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 100Mi
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: traefik-ingress-controller
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
  templateGeneration: 20
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
