traefi3_traefik-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin
  namespace: kube-system
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: traefik-ingress-lb
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: traefik-admin
  namespace: kube-system
spec:
  rules:
  - host: traefik.your-cool-domain-name.co.uk
    http:
      paths:
      - backend:
          serviceName: traefik-admin
          servicePort: 80
        path: /
